src/test/resources/semantic/custom/reject/subtractVoid.ul
void main() {
}

void foo() {
    boolean result;
    result = main() - main();
}
